fix sidebar double scrollbar

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -108,6 +108,10 @@ Sidebar */
   gap: 0;
   min-height: 0;
 
+  &:after {
+    padding: 0;
+  }
+
   // Custom sidebar
   .aj-sidebar.aj-custom {
     height: 100%;
